<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/main_header">

        <ListPreference
            app:key="numThreads"
            app:entries="@array/num_threads_entries"
            app:entryValues="@array/num_threads_values"
            app:defaultValue="0"
            app:title="Number of Threads (CPU Mode)"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>



    <PreferenceCategory app:title="@string/other_header">

        <Preference
            app:key="version"
            app:title="@string/version"
            app:summary="@string/version_summary"
            />

        <Preference
            app:key="about"
            app:title="@string/about"
            />


    </PreferenceCategory>

</PreferenceScreen>