<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/tb_use_gpu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:alpha="0.5"
        android:background="@drawable/cpu_gpu_bg"
        android:textColor="#0000FF"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/warning_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/warning"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tb_use_gpu"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"

        android:text="@string/setting"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

<!--    android:layout_marginBottom="48dp"-->

<!--    <ImageButton-->
<!--        android:id="@+id/setting_button"-->
<!--        android:layout_width="48dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginEnd="48dp"-->

<!--        android:src="@drawable/ic_settings"-->
<!--        android:padding="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:contentDescription="@string/setting"-->
<!--        />-->
<!--    android:background="@drawable/ic_settings"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_start_detect0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NanoDet_Plus"
                android:textAllCaps="false"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_start_detect1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YOLOv5s"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btn_start_detect0" />

            <Button
                android:id="@+id/btn_start_detect2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/YOLOv4_tiny"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btn_start_detect1" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
